# TimeRotator

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
src/module0/: __init__.py  util.py
src/timerotator/: __init__.py  timerotator.py
tests/: test_timerotator.py  test_util.py
